# cashyx

core/: Cargo.toml  build.rs
core/src/: lib.rs  model.rs  service.rs  storage.rs
core/src/zfile/: mod.rs  zfile.rs
core/test/: accounts.csv  categories.csv  currencies.csv  records-2020-01.csv
zstore/: Cargo.toml  build.rs
zstore/src/: file.rs  lib.rs
zstore/test/: file_1.txt  file_2.csv
