[package]
name = "cashyx-core"
version = "0.1.0"
authors = ["rumatoest <rumatoest@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = {version="1.0.104", features = ["derive"]}
chrono = "0.4.10"
csv = "1.1.2"
zip = {version="0.5.4", default-features = false, features = ["deflate"]}


[build-dependencies]
zip = {version="0.5.4", default-features = false, features = ["deflate"]}